--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,11 @@
 }
 
 body {
-  font-family: "Roboto", sans-serif !important;
+  font-family: "Roboto", sans-serif;
+}
+.test {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-position-y: bottom;
+  border: 1px solid red;
 }
