--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -6,11 +5,5 @@
 }
 
 body {
-  font-family: "Roboto", sans-serif;
-}
-.test {
-  background-position: center;
-  background-repeat: no-repeat;
-  background-position-y: bottom;
-  border: 1px solid red;
+  font-family: "Metropolis";
 }
