--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: "Metropolis";
-}
-
 .classBgImg {
   width: 100%;
   background-image: url("./assets/images/bgImg.png");
@@ -15,4 +5,11 @@ body {
   background-position: center;
   background-size: cover;
   background-position-y: top;
+}
+.bookDemoInfoBgImg {
+  width: 100%;
+  background-image: url("./assets/images/bookdemoinfoimg.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
