--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -2,12 +2,9 @@
   width: 100%;
   height: 87px;
   padding: 0px 150px;
-  z-index: 99;
-  position: fixed;
-  top: 0;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   background-color: #ffffff;
 }
 .logo {
