--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,13 @@
   background-size: cover;
   background-position-y: top;
 }
+.bg-img-2 {
+  background-image: url("./assets//images/mobileBgImg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  background-position-y: bottom;
+}
 .bookDemoInfoBgImg {
   width: 100%;
   background-image: url("./assets/images/bookdemoinfoimg.svg");
