modified in FAQ component

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .classBgImg {
   width: 100%;
-  background-image: url("./assets/images/bgImg.png");
+  background-image: url("./assets/images/bgImg.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
